format better, need to correct: border-shadow, font, and navigation + minor spacing stuff

--- a/sample.css
+++ b/sample.css
@@ -2,98 +2,97 @@
 html, body {
     margin: 0px;
     padding: 0px;
-
     background-color: white;
     font-family: sans-serif !important;
+    height: 100%;
 }
 
 * {
     font-weight: normal; 
 }
 
+/*
+#wcont { background-color: darkgray; } #wthr-nav { background-color: red; } #wcont-title { background-color: green; } #wcont-main {background-color: blue; }
+*/
+
+/*-----------------------------------> WCONT <----------*/
+
 #wcont {
     display: flex;
-    flex: 1;
     flex-direction: column;
     flex-wrap: wrap;
+    align-items: center;
 
-    padding: 10px 20px 10px 20px;
+    padding: 10px 60px 10px 60px;
+    justify-content: space-between;
+    min-height: 80%;
+    max-height: 1200px;
 }
 
-
-#wcont-main {
-    display: flex;
+#wcont > * {
     flex: 1;
-    flex-direction: row;
-    flex-wrap: wrap;
-
     width: 100%;
 }
 
-/* NAVIGATION-BAR */
+/*-----------------------------------> NAVBAR <---------*/
+
 #wthr-nav {
     display: flex;
-    flex: 3 2 0;
     flex-direction: row;
     flex-wrap: wrap;
-
-    margin: 0px;
-    padding: 0px;
-
     width: 100%;
-    height: 0 auto;
+    justify-content: space-between;
 }
-#wthr-nav-title {
-    margin: 0px;
-    padding: 0px;
 
-    text-align: left;
+#wthr-nav-title {
 }
 
 #wthr-nav-right {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-
-    margin: auto;
-    padding: 0px;
 }
 
 .wthr-nav-element {
-    display: flex;
-    flex: 1;
-    flex-wrap: wrap;
-
-    width: 50%;
-    margin: 0px;
-
-    padding: 0px;
 }
 
 #wthr-nav-right .wthr-nav-element {
-    justify-content: right;
+    /*justify-content: right;*/
+    display: inline-block;
 }
 
-/* CONTENT */
+/*-----------------------------------> TITLE <----------*/
 
 #wcont-title {
 }
 
+/*-----------------------------------> ELEMENT <--------*/
+
+#wcont-main {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+
+    align-items: center;
+    justify-content: space-between;
+}
+
 .wcont-el {
     display: flex;
-    flex: 1;
     flex-direction: column;
     flex-wrap: wrap;
-    margin: 20px;
+    max-width: 200px;
 }
 
 .wcont-el-title {
+    text-align: left;
 }
+
+/*-----------------------------------> CARD <-----------*/
 
 .wcont-card {
     text-align: center;
     border-radius: 20px;
     box-shadow: 1px 5px 5px 5px #000000;
+    padding-left: 40px;
+    padding-right: 40px;
 }
 
 .wcont-card-title {
@@ -101,50 +100,4 @@ html, body {
 
 .wcont-card-temp {
 }
-
-
-/*
-#wthr-nav
-
-    #wthr-nav-right
-    
-    .wthr-nav-element
-
-#wcont"
-
-    #wcont-title
-    
-    #wcont-main
-    
-    .wcont-el
-    
-    .wcont-el-title
-    
-    .wcont-card
-    
-    .wcont-card-title
-*/
-
-
-/*
-#weather-monday-svg
-#weather-monday-circle
-#weather-monday-temp
-
-#weather-tuesday-svg
-#weather-tuesday-circle
-#weather-tuesday-temp
-
-#weather-wednesday-svg
-#weather-wednesday-circle
-#weather-wednesday-temp
-
-#weather-thursday-svg
-#weather-thursday-circle
-#weather-thursday-temp
-
-#weather-friday-svg
-#weather-friday-circle
-#weather-friday-temp
-*/
 
